--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -126,7 +126,7 @@
                                 aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="/perfil/{{session['cliente_id']}}">Perfil</a></li>
                                 <li><a class="dropdown-item" href="/pedido/{{session['cliente_id']}}">Pedidos</a></li>
-                                <li><a href="" class="dropdown-item">Asistente</a></li>
+                                <li><a href="/asistente" class="dropdown-item">Asistente</a></li>
                                 <li><a href="/logout/{{session['id_conexion']}}" class="dropdown-item">Logout</a></li>
                             </ul>
                         </li>
@@ -180,7 +180,7 @@
                     <div class="col-lg-2 col-md-4 mb-4 mb-lg-0 order-lg-3 order-md-4">
                         <h4 class="footer-heading-color fw-bold font-sans-serif mb-3 mb-lg-4">Mas</h4>
                         <ul class="list-unstyled mb-0">
-                            <li class="mb-2"><a class="link-900 fs-1 fw-medium text-decoration-none" href="#!">Asistete
+                            <li class="mb-2"><a class="link-900 fs-1 fw-medium text-decoration-none" href="/asistente">Asistete
                                     virtual</a></li>
                             <li class="mb-2"><a class="link-900 fs-1 fw-medium text-decoration-none"
                                     href="#!">Recomendaciones</a></li>
