--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 <section style="padding-top: 7rem;">
-    <div class="bg-holder" style="background-image:url(static/assets/img/hero/hero-bg.svg);">
+    <div class="bg-holder">
     </div>
 
     <div class="container py-5">
@@ -16,7 +16,7 @@
                         <h5 class="my-3">{{persona.nombre}}</h5>
                         <p class="text-dark mb-4">{{persona.direccion}}</p>
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                            <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
                                 class="btn btn-outline-primary ms-1">Actualizar</button>
                             <button type="button" class="btn btn-outline-primary ms-1" data-bs-toggle="modal"
                                 data-bs-target="#exampleModales">Cambiar contraseña</button>
@@ -158,15 +158,7 @@
                                                                 value="" required>
                                                         </div>
                                                     </div>
-
-
-
-
-
-
-
                                                 </div>
-
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary"
@@ -305,5 +297,60 @@
             </div>
         </div>
     </div>
+</section>
+<hr>
+<section class="pt-5 pt-md-9">
+    <div class="container">
+		<div class="row align-items-center">
+            <h3>Lista de conexiones activas</h3>
+            <table id="example1" class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>IP</th>
+                        <th>Navegador</th>
+                        <th>Version del navegador</th>
+                        <th>Sistema opertativo</th>
+                        <th>Version del sistema operativo</th>
+                        <th>Estado</th>
+                        <th>Accion</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for productos in conexion %}
+                    <tr>
+                        <th>{{loop.index}}</th>
+                      
+                      <th>{{productos.ip}}</th>
+                      <th>{{productos.navegador}}
+                      </th>
+                      <th>{{productos.version_navegador}}</th>
+                      <th>{{productos.os}}</th>
+                      <th>{{productos.version_os}}</th>
+
+
+
+                        <td>
+                            {% if productos.estado == 1 %}
+                            <span class="badge bg-danger">Activo</span>
+
+                            {% endif %}
+                        </td>
+                        <td>
+
+                            <a href="/logout/{{productos.id}}" class="btn btn-danger">
+                                <i class="fas fa-trash-alt"></i>
+                                
+                            </a>
+                          
+                           
+                        </td>
+                    </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+		</div>
+	</div>
 </section>
 {% endblock %}
