Mejoras en el asistente

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="/admin" class="brand-link">
-                <img src="/static/img/2.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3">
+                <img src="https://res.cloudinary.com/dxhb03y8f/image/upload/v1691893383/2_vtwz32.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3">
                 <span class="brand-text font-weight-light">Luxx Art</span>
             </a>
 
