--- a/templates/asistente.html
+++ b/templates/asistente.html
@@ -1,5 +1,6 @@
 {% extends "index_base.html" %}
-{% block title %} || Asistente{% endblock %}
+{% block title %} || Perfil{% endblock %}
+
 
 {% block main %}
 <style>
@@ -8,10 +9,23 @@
         margin-bottom: auto;
     }
 
+
     .card {
-        height: 500px;
+        background-color: #1c2333;
         border-radius: 15px !important;
-        background-color: rgba(75, 68, 68, 0.452) !important;
+        height: 450px;
+    }
+
+    .card-header {
+        background-color: #233e50;
+        border-radius: 15px 15px 0 0 !important;
+        border-bottom: 0 !important;
+        height: min-content;
+    }
+
+    .card-footer {
+        border-radius: 0 0 15px 15px !important;
+        border-top: 0 !important;
     }
 
     .contacts_body {
@@ -32,6 +46,7 @@
     .card-footer {
         border-radius: 0 0 15px 15px !important;
         border-top: 0 !important;
+        background: #1e4b7a;
     }
 
     .container {
@@ -53,7 +68,7 @@
     .type_msg {
         background-color: rgba(0, 0, 0, 0.3) !important;
         border: 0 !important;
-        color: rgb(27, 27, 27) !important;
+        color: rgb(255, 255, 255) !important;
         height: 60px !important;
         overflow-y: auto;
     }
@@ -175,8 +190,9 @@
         margin-bottom: auto;
         margin-left: 10px;
         border-radius: 25px;
-        background-color: rgb(82, 172, 255);
+        background-color: #1e4b7a;
         padding: 10px;
+        color: white;
         position: relative;
     }
 
@@ -188,13 +204,14 @@
         background-color: #58cc71;
         padding: 10px;
         position: relative;
+        color: white;
     }
 
     .msg_time {
         position: absolute;
         left: 0;
         bottom: -15px;
-        color: rgba(255, 255, 255, 0.5);
+        color: rgb(255, 255, 255);
         font-size: 10px;
     }
 
@@ -202,7 +219,7 @@
         position: absolute;
         right: 0;
         bottom: -15px;
-        color: rgba(0, 0, 0, 0.5);
+        color: rgb(250, 248, 248);
         font-size: 10px;
     }
 
@@ -258,24 +275,23 @@
         }
     }
 </style>
-<section style="padding-top: 7rem;">
+<section style="padding-top: 9rem;">
     <div class="bg-holder">
     </div>
-
-    <div class="container-fluid">
-        <div class="row justify-content-center ">
-            <div class="col-md-8 col-xl-9 chat">
+    <article class="container-">
+        <div class="row justify-content-center h-100">
+            <div class="col-md-12 col-xl-6 chat">
                 <div class="card">
-                    <div class="card-header msg_head" style="background: rgb(61, 58, 58);">
+                    <div class="card-header msg_head">
                         <div class="d-flex bd-highlight">
                             <div class="img_cont">
                                 <img src="https://res.cloudinary.com/dxhb03y8f/image/upload/v1691826766/5_zineop.png"
-                                    class="rounded-circle user_img">
+                                    class="round-btn-lg rounded-circle me-3 shadow" width="50">
                                 <span class="online_icon"></span>
                             </div>
                             <div class="user_info">
-                                <span>Luxx</span>
-                                <p>Estoy para responder tu preguntas!</p>
+                                <span>Asistente Luxx</span>
+                                <p>Has tus consultas!</p>
                             </div>
                         </div>
                     </div>
@@ -285,28 +301,25 @@
                     </div>
                     <div class="card-footer">
                         <form id="messageArea" class="input-group">
-                            <div class="col-sm-9" style="margin: 8px;">
-                                <div class="input-group-icon">
-                                    <input class="form-control form-little-squirrel-control" type="text" id="text"
-                                        name="msg" placeholder="Mensaje" aria-label="email" required />
-                                    <img class="input-box-icon" src="static/assets/img/cta/mail.svg" width="17"
-                                        alt="mail" />
-                                </div>
-                            </div>
-                            <div class="col-sm-auto">
-                                <button type="submit"   class="btn btn-danger orange-gradient-btn fs--1" id="">Enviar</button>
-                                <button class="btn btn-danger orange-gradient-btn fs--1" id="mic-button">🎙</button>
+                            <input type="text" id="text" name="msg" placeholder="Escribe un mensaje" autocomplete="off"
+                                class="form-control type_msg rounded-pill" required />
+
+                            <div class="input-group-btn d-flex justify-content-center">
+
+                                <button type="button" id="mic" class="btn btn-success rounded  m-2">
+                                    <i class="fas fa-microphone"></i>
+                                </button>
+                                <button type="submit" id="send" class="btn btn-primary m-2">
+                                    <i class="fas fa-location-arrow"></i>
+                                </button>
                             </div>
                         </form>
-
-                        
 
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
+    </article>
 </section>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
@@ -319,8 +332,6 @@
         recognition.onresult = function (event) {
             var transcript = event.results[0][0].transcript;
             document.getElementById('text').value = transcript;
-             // Coloca el texto reconocido en el campo de texto
-            document.getElementById('messageArea').submit();
             console.log('Texto reconocido:', transcript);
         };
 
@@ -328,14 +339,13 @@
             console.error('Error de reconocimiento:', event.error);
         };
 
-        document.getElementById('mic-button').addEventListener('click', function () {
+        document.getElementById('mic').addEventListener('click', function () {
             recognition.start();
         });
     } else {
         console.log('El navegador no admite la API Web Speech');
     }
 </script>
-
 <script>
     $(document).ready(function () {
         $("#messageArea").on("submit", function (event) {
@@ -363,13 +373,34 @@
                 type: "POST",
                 url: "/get",
             }).done(function (data) {
-                var botHtml = '<div class="d-flex justify-content-start mb-4"><img src="https://res.cloudinary.com/dxhb03y8f/image/upload/v1691826766/5_zineop.png"class="round-btn-lg rounded-circle me-3 shadow"><div class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span></div></div>';
+                $("#messageFormeight .msg_cotainer:last").find(".audio").remove();
+                var botHtml = '<div class="d-flex justify-content-start mb-4"><img src="https://res.cloudinary.com/dxhb03y8f/image/upload/v1691826766/5_zineop.png"class="round-btn-lg rounded-circle me-3 shadow"><div id="msg_cotainer" class="msg_cotainer">' + data + '<span class="msg_time">' + str_time + '</span><button type="button" id="audio" class="btn btn-success rounded m-2 audio"><i class="fas fa-volume-up"></i></button></div></div>';
                 $("#messageFormeight").append($.parseHTML(botHtml));
+                document.getElementById('audio').addEventListener('click', function () {
+                    var mensaje = data; // Aquí debes obtener el contenido de tu mensaje
+                    leerMensaje(mensaje);
+                });
             });
             event.preventDefault();
         });
     });
 </script>
+<script>
+    function leerMensaje(mensaje) {
+        // Comprobar si el navegador admite la API de Text-to-Speech
+        if ('speechSynthesis' in window) {
+            // Crear una nueva instancia del objeto SpeechSynthesisUtterance
+            var mensajeVoz = new SpeechSynthesisUtterance(mensaje);
 
+            // Usar la voz predeterminada del sistema (puedes personalizarlo)
+            mensajeVoz.voice = speechSynthesis.getVoices()[0];
 
+            // Reproducir el mensaje en voz alta
+            speechSynthesis.speak(mensajeVoz);
+        } else {
+            alert('Tu navegador no admite la síntesis de voz.');
+        }
+    }
+
+</script>
 {% endblock %}
